<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/include_toolbar" />
        <android.support.v7.widget.CardView
            android:layout_marginTop="@dimen/space_normal"
            android:layout_marginRight="@dimen/space_normal"
            android:layout_marginLeft="@dimen/space_normal"
            android:layout_marginBottom="@dimen/space_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/color_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/space_large"
                    android:paddingLeft="@dimen/space_large"
                    android:paddingRight="@dimen/space_large"
                    android:paddingTop="@dimen/space_large"
                    android:text="@string/app_name"
                    android:textColor="#bb000000"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#e0e0e0"
                    android:padding="@dimen/space_large"
                    android:text="@string/color_picker_license" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_marginTop="@dimen/space_normal"
            android:layout_marginRight="@dimen/space_normal"
            android:layout_marginLeft="@dimen/space_normal"
            android:layout_marginBottom="@dimen/space_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/photo_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/space_large"
                    android:paddingLeft="@dimen/space_large"
                    android:paddingRight="@dimen/space_large"
                    android:paddingTop="@dimen/space_large"
                    android:text="PhotoView"
                    android:textColor="#bb000000"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#e0e0e0"
                    android:padding="@dimen/space_large"
                    android:text="@string/photo_view_license" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>